[tool.poetry]
name = "holo"
version = "0.1.0"
description = "Holo is a library provides overload like cpp"
authors = ["lvzhi <279094354@qq.com>"]
repository = "https://github.com/Na0ture/holo"
keywords = ["overload"]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Programming Language :: Python :: 3.8"
]

[tool.poetry.dependencies]
python = "^3.8"

[tool.poetry.dev-dependencies]
pytest = "^5.3.5"
black = "^19.10b0"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
